# kafka-rust

./: Cargo.toml
examples/: async_client.rs
src/: async_client.rs  codec.rs  lib.rs  proto.rs
