[package]
name = "kafka"
version = "0.7.0"
authors = ["Yousuf Fauzan", "Petr Novotnik <pnovotnik@googlemail.com>"]
description = "Rust client for Apache Kafka"
homepage = "https://github.com/spicavigo/kafka-rust"
repository = "https://github.com/spicavigo/kafka-rust"
documentation = "https://docs.rs/kafka/"
readme = "README.md"
keywords = ["kafka", "queue"]
license = "MIT"


[dependencies]
crc = "1.3"
log = "0.3"
ref_slice = "1.0"
fnv = "1.0"
twox-hash = "1.1"
error-chain = "0.10"
tokio-service = "0.1.0"
tokio-proto = "0.1.1"
tokio-core = "0.1.10"
tokio-io = "0.1.3"
byteorder = "1.1.0"
futures = "0.1.16"
bytes = "0.4.5"

flate2 = { version = "0.2", optional = true }
snap = { version = "0.2", optional = true }
openssl = { version = "0.9", optional = true }

[dev-dependencies]
getopts = "0.2"
env_logger = "0.4"
time = "0.1"
rand = "0.3"


[features]
default = ["snappy", "gzip", "security"]
snappy = ["snap"]
gzip = ["flate2"]
security = ["openssl"]
nightly = []
integration_tests = []
